# marketplace_managering_bot

./: .env  README.md  bot.py  main.py  maintest.py  maintest2.py  price_entries.txt  pyproject.toml  stock_entries.txt
data/filter/: allow.txt
data/user/: 78527993.json
data/xml/: favourite.xml  sonex.xml  stilfort.xml
modules/: create_user.py  download_xml.py  test.py  xml_parser.py
