[tool.poetry]
name = "marketplace-managering-bot"
version = "0.1.0"
description = ""
authors = ["Artemio Panzini <panferovartemv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
